# FlowPlayground

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  health.py  image.py  video.py
app/core/: config.py  security.py
app/models/: __init__.py  requests.py  responses.py
app/services/: __init__.py  fal_ai.py  media_processor.py
app/utils/: __init__.py  file_handler.py
gradio_app/: __init__.py  interface.py
tests/: __init__.py  test_main.py
